# kwimy-wallflow

./: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml  python-package.yml  release-standalone.yml
assets/: style.css
kwimy_wallflow/: __init__.py  __main__.py  app.py  cli.py  config.py  daemon.py  paths.py
kwimy_wallflow/assets/: style.css
kwimy_wallflow/ui/: __init__.py  navigation.py  thumbnails.py
matuwall/: __init__.py  __main__.py  app.py  cli.py  config.py  daemon.py  paths.py  wallpapers.py
matuwall/assets/: style.css
matuwall/ui/: __init__.py  bootstrap.py  content.py  models.py  navigation.py  panel.py  runtime.py  thumbnails.py  window_setup.py  window_state.py
scripts/: build-standalone.sh
systemd/: kwimy-wallflow.service  matuwall.service
tests/: test_cli.py  test_config.py  test_wallpapers.py
