[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matuwall"
version = "0.1.1"
description = "GTK4 + libadwaita wallpaper picker for matugen"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Nauris Steins" }
]

[project.scripts]
matuwall = "matuwall.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["matuwall*"]

[tool.setuptools.package-data]
matuwall = ["assets/*.css"]
