[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matuwall"
version = "0.1.1"
description = "GTK4 + libadwaita wallpaper picker for matugen"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Nauris Steins" }
]

[project.scripts]
matuwall = "matuwall.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["matuwall*"]

[tool.setuptools.package-data]
matuwall = ["assets/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"matuwall/app.py" = ["E402"]
"matuwall/ui/*.py" = ["E402"]
