[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matuwall"
version = "0.1.2"
description = "GTK4 + libadwaita wallpaper picker for matugen"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
  { name = "Nauris Steins" }
]

[project.scripts]
matuwall = "matuwall.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["matuwall*"]

[tool.setuptools.package-data]
matuwall = ["assets/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"matuwall/app.py" = ["E402"]
"matuwall/ui/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
files = [
  "matuwall/cli.py",
  "matuwall/config.py",
  "matuwall/daemon.py",
  "matuwall/paths.py",
  "matuwall/wallpapers.py",
  "tests",
]
